--- a/user-service/src/main/resources/application.properties
+++ b/user-service/src/main/resources/application.properties
@@ -2,7 +2,7 @@ spring.application.name=user-service
 
 spring.datasource.url=jdbc:mysql://localhost:3306/userdb
 spring.datasource.username=root
-spring.datasource.password=tabrez123
+spring.datasource.password=Ashutosh@123
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 
 # JPA Configuration
