--- a/notification-service/src/main/resources/application.properties
+++ b/notification-service/src/main/resources/application.properties
@@ -3,11 +3,6 @@ spring.application.name=notification-service
 # Server Configuration
 server.port=8084
 
-# Kafka Configuration
-#spring.kafka.consumer.bootstrap-servers=localhost:9092
-#spring.kafka.consumer.group-id=notification-service-group
-#spring.kafka.consumer.auto-offset-reset=earliest
-
 # Email Configuration
 spring.mail.host=smtp.gmail.com
 spring.mail.port=587
@@ -21,17 +16,14 @@ spring.datasource.url=jdbc:mysql://localhost:3306/notificationdb2
 spring.datasource.username=root
 spring.datasource.password=Ashutosh@123
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
+
+# JPA Configuration
+spring.jpa.database-platform=org.hibernate.dialect.MySQL8Dialect
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.show-sql=true
+spring.config.import=optional:configserver:http://localhost:8888
 
 # Eureka Configuration
 eureka.client.service-url.defaultZone=http://localhost:8761/eureka/
 eureka.client.register-with-eureka=true
 eureka.client.fetch-registry=true
-
-# Kafka Producer Configuration
-#spring.kafka.producer.retries=0
-#spring.kafka.producer.acks=all
-
-# Kafka Consumer Configuration
-#spring.kafka.consumer.enable-auto-commit=false
