--- a/attendance-service/src/main/resources/application.properties
+++ b/attendance-service/src/main/resources/application.properties
@@ -7,6 +7,7 @@ spring.datasource.password=Ashutosh@123
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 
 # JPA Configuration
+spring.config.import=optional:configserver:http://localhost:8888
 spring.jpa.database-platform=org.hibernate.dialect.MySQL8Dialect
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.show-sql=true
