added controller and dtos to attendance service

--- a/api-gateway/src/main/resources/application.properties
+++ b/api-gateway/src/main/resources/application.properties
@@ -6,19 +6,19 @@ eureka.client.service-url.defaultZone=http://localhost:8761/eureka/
 eureka.client.register-with-eureka=true
 eureka.client.fetch-registry=true
 
-# Customer Service Route (Attendance Service)
+# ATTENDANCE Service Route (Attendance Service)
 spring.cloud.gateway.routes[0].id=attendance-service
-spring.cloud.gateway.routes[0].uri=lb://ATTENDANCESERVICE
+spring.cloud.gateway.routes[0].uri=lb://ATTENDANCE-SERVICE
 spring.cloud.gateway.routes[0].predicates[0]=Path=/api/attendance/**
 
-# Account Service Route (User Service)
+# EMPLOYEE Service Route (User Service)
 spring.cloud.gateway.routes[1].id=user-service
-spring.cloud.gateway.routes[1].uri=lb://USERSERVICE
-spring.cloud.gateway.routes[1].predicates[0]=Path=/api/users/**
+spring.cloud.gateway.routes[1].uri=lb://USER-SERVICE
+spring.cloud.gateway.routes[1].predicates[0]=Path=/api/employee/**
 
-# Transaction Service Route (Notification Service)
+# NOTIFICATION Service Route (Notification Service)
 spring.cloud.gateway.routes[2].id=notification-service
-spring.cloud.gateway.routes[2].uri=lb://NOTIFICATIONSERVICE
+spring.cloud.gateway.routes[2].uri=lb://NOTIFICATION-SERVICE
 spring.cloud.gateway.routes[2].predicates[0]=Path=/api/notifications/**
 
 # Debug logging for troubleshooting
