--- a/user-service/src/main/resources/application.properties
+++ b/user-service/src/main/resources/application.properties
@@ -20,3 +20,4 @@ eureka.client.fetch-registry=true
 
 # Logging Configuration
 logging.level.org.springframework.security=DEBUG
+spring.main.allow-circular-references=true
